Creacion de componente Encargado

--- a/Frontend/app/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/app/src/app/components/sidebar/sidebar.component.html
@@ -28,6 +28,8 @@
         </a>
         <ul class="nav flex-column ms-3" [@submenuToggle]="getState('registros')">
           <li><a routerLink="/alumnos" class="nav-link text-dark">Registro de alumnos</a></li>
+          <li><a routerLink="/encargado" class="nav-link text-dark">Registro de encargados</a></li>
+          
         </ul>
       </li>
   
