--- a/Frontend/app/src/app/business/encargado/encargado.component.html
+++ b/Frontend/app/src/app/business/encargado/encargado.component.html
@@ -1,21 +1,34 @@
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="display-4 m-0">Registro de encargados</h1>
-    <button class="btn btn-primary h-25 mb-0"><i
-        class="bi bi-plus"></i>Nuevo Encargado</button>
+    <button class="btn btn-primary h-25 mb-0"><i class="bi bi-plus"></i>Nuevo Encargado</button>
 </div>
 
 <div class="table-responsible custom-scroll">
     <table class="table table-striped table-hover custom-table">
         <thead class="table-danger sticky-header">
-        <tr>
-            <th>ID</th>
-            <th>DPI</th>
-            <th>Nombres</th>
-            <th>Apellidos</th>
-            <th>Telefono</th>
-            <th>Dirección</th>
-            <th>Estado</th>
-        </tr>
+            <tr>
+                <th>ID</th>
+                <th>DPI</th>
+                <th>Nombre </th>
+                <th>Telefono</th>
+                <th>Dirección</th>
+                <th>Acciones</th>
+            </tr>
         </thead>
+
+        <tbody>
+            <tr *ngFor="let encargado of encargados">
+                <td>{{ encargado.id }}</td>
+                <td>{{ encargado.dpi }}</td>
+                <td>{{ encargado.nombres || '' }} {{ encargado.apellidos }}</td>
+                <td>{{ encargado.telefono }}</td>
+                <td>{{ encargado.direccion }}</td>
+                <td>
+                    <button class="btn btn-sm btn-info me-1">Ver Información</button>
+                    <button class="btn btn-sm btn-danger">Eliminar</button>
+                </td>
+            </tr>
+        </tbody>
+
     </table>
 </div>
