--- a/Frontend/app/src/app/business/encargado/encargado.component.html
+++ b/Frontend/app/src/app/business/encargado/encargado.component.html
@@ -26,7 +26,7 @@
                 <td>{{ encargado.direccion }}</td>
                 <td>
                     <button class="btn btn-sm btn-info me-1" (click)="abrirModalVer(encargado)">Ver Información</button>
-                    <button class="btn btn-sm btn-danger">Eliminar</button>
+                    <button class="btn btn-sm btn-danger" (click)="eliminarEncargado(encargado.id)">Eliminar</button>
                 </td>
             </tr>
         </tbody>
