--- a/Frontend/app/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/app/src/app/components/sidebar/sidebar.component.html
@@ -21,6 +21,13 @@
         </a>
       </li>
   
+      <!-- Grupos-->
+       <li class="nav-item">
+        <a routerLink="/grupos" class="nav-link text-dark">
+          <i class="bi bi-people me-2"></i> Grupos
+        </a>
+       </li>
+
       <!-- registros-->
       <li>
         <a (click)="toggleSubmenu('registros')" class="nav-link text-dark" role="button">
