Creacion de entidad Grupo y sus relacioens en el BACK

--- a/Frontend/app/src/app/business/grupos/grupos.component.html
+++ b/Frontend/app/src/app/business/grupos/grupos.component.html
@@ -29,8 +29,8 @@
                 <td>Sábado</td>
                 <td>15</td>
                 <td>
-                    <button class="btn btn-sm btn-info me-1" >Ver Información</button>
-                    <button class="btn btn-sm btn-danger" >Eliminar</button>
+                    <button class="btn btn-sm btn-info me-1">Ver</button>
+                    <button class="btn btn-sm btn-danger">Eliminar</button>
                 </td>
             </tr>
         </tbody>
