--- a/Frontend/app/src/app/business/grupos/grupos.component.html
+++ b/Frontend/app/src/app/business/grupos/grupos.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="display-4 m-0">Grupos</h1>
-    <button class="btn btn-primary h-25 mb-0" ><i class="bi bi-plus"
+    <button class="btn btn-primary h-25 mb-0" (click)="abrirModalNuevo()"><i class="bi bi-plus"
             title="Crear Encargado"></i>Nuevo Grupo</button>
 </div>
 
@@ -20,20 +20,125 @@
         </thead>
 
         <tbody>
-            <tr >
-                <td>1</td>
-                <td>GRP-TOC</td>
-                <td>Técnico Operador de Computadoras</td>
-                <td>Matutina</td>
-                <td>7:00 a 12:00 p.m.</td>
-                <td>Sábado</td>
-                <td>15</td>
+            <tr *ngFor="let grupo of grupos">
+                <td>{{ grupo.id }}</td>
+                <td>{{ grupo.codigo }}</td>
+                <td>{{ grupo.curso }}</td>
+                <td>{{ grupo.jornada }}</td>
+                <td>{{ grupo.horario }}</td>
+                <td>{{ grupo.dia }}</td>
+                <td>{{ grupo.cantidadAlumnos }}</td>
                 <td>
                     <button class="btn btn-sm btn-info me-1">Ver</button>
                     <button class="btn btn-sm btn-danger">Eliminar</button>
                 </td>
             </tr>
         </tbody>
-
     </table>
+</div>
+
+
+<!-- Backdrop-->
+<div class="modal-backdrop show" *ngIf="mostrarModal" (click)="cerrarModal()"></div>
+
+<div class="modal d-block" *ngIf="mostrarModal">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Detalle de grupo</h5>
+                <button type="button" class="btn-close" (click)="cerrarModal()"></button>
+            </div>
+
+            <div class="modal-body" *ngIf="grupoSeleccionado">
+
+                <div class="row g-3">
+                    <!-- Código del grupo-->
+                    <div class="col-md-6">
+                        <label class="form-label">Código</label>
+                        <input type="text" class="form-control" value="####-####" readonly>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Curso</label>
+
+                        <select class="form-select" name="cursoId" id="curso" required [disabled]="!modoEdicion"
+                            [(ngModel)]="grupoSeleccionado.cursoId" #curso="ngModel">
+                            <option [ngValue]="null" disabled>
+                                Seleccione un curso
+                            </option>
+
+                            <option *ngFor="let curso of cursos" [ngValue]="curso.id">
+                                {{ curso.nombre }}
+                            </option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Jornada</label>
+                        <select class="form-select" [(ngModel)]="grupoSeleccionado.jornada" name="jornada" required
+                            [disabled]="!modoEdicion">
+
+                            <option value="" disabled>Seleccione una jornada</option>
+                            <option value="Matutina">Matutina</option>
+                            <option value="Vespertina">Vespertina</option>
+                            <option value="Nocturna">Nocturna</option>
+
+                        </select>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Horario</label>
+
+                        <div class="d-flex gap-2">
+                            <!-- Hora inicio -->
+                            <select class="form-select" [(ngModel)]="horaInicio" name="horaInicio" required
+                                [disabled]="!modoEdicion">
+
+                                <option value="" disabled selected>Inicio</option>
+                                <option *ngFor="let h of horas" [value]="h">
+                                    {{ h }}
+                                </option>
+                            </select>
+
+                            <span class="align-self-center fw-bold">a</span>
+
+                            <!-- Hora fin -->
+                            <select class="form-select" [(ngModel)]="horaFin" name="horaFin" required
+                                [disabled]="!modoEdicion || !horaInicio">
+
+                                <option value="" disabled selected>Fin</option>
+                                <option *ngFor="let h of horas" [value]="h">
+                                    {{ h }}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12">
+                        <label class="form-label">Días de clase</label>
+
+                        <div class="d-flex flex-wrap gap-3">
+                            <div class="form-check" *ngFor="let dia of diasSemana">
+                                <input class="form-check-input" type="checkbox" [id]="dia" [value]="dia"
+                                    (change)="onDiaChange($event)" [disabled]="!modoEdicion">
+
+                                <label class="form-check-label" [for]="dia">
+                                    {{ dia }}
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button *ngIf="!modoEdicion" class="btn btn-success"> Editar</button>
+                        <button *ngIf="modoEdicion" class="btn btn-primary">Guardar</button>
+                        <button class="btn btn-secondary" (click)="cerrarModal()">Cerrar</button>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 </div>
