--- a/Frontend/app/src/app/components/footer/footer.component.html
+++ b/Frontend/app/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="text-center">
-      <small>&copy; 2025 Betshalom. Todos los derechos reservados.</small>
+      <small>&copy; 2025 Jsiana. Todos los derechos reservados.</small>
     </div>
   </div>
 </footer>
