--- a/Frontend/app/src/styles.scss
+++ b/Frontend/app/src/styles.scss
@@ -1,3 +1,18 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(74,74,74,.1);
+    z-index: 99999;
+    pointer-events: all;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
