--- a/Frontend/app/src/app/business/info-grupo/info-grupo.component.html
+++ b/Frontend/app/src/app/business/info-grupo/info-grupo.component.html
@@ -51,16 +51,16 @@
     </header>
 
     <!-- MAIN -->
-    <main class="flex-grow-1 d-flex flex-column bg-light mt-3 mb-3">
+    <main class="flex-grow-1 d-flex flex-column bg-light mt-3 mb-3 ">
         <div class="container-fluid">
 
             <div class="card shadow-sm">
                 <div class="card-header bg-secondary text-white mb-0">
                     <h5>Alumnos Asignados</h5>
                 </div>
-                <div class="card-body p-0">
+                <div class="card-body p-0 ">
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover mb-0 me-0 pe-2">
+                        <table class="table table-striped table-hover mb-0 me-0 pe-2 bg">
                             <thead class="table-light">
                                 <tr>
                                     <th style="width: 2%;">#</th>
