--- a/Frontend/app/src/app/business/grupos/grupos.component.html
+++ b/Frontend/app/src/app/business/grupos/grupos.component.html
@@ -1,8 +1,25 @@
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="display-4 m-0">Grupos</h1>
-    <button class="btn btn-primary h-25 mb-0" (click)="abrirModalNuevo()"><i class="bi bi-plus"
-            title="Crear Encargado"></i>Nuevo Grupo</button>
+
+    <div class="d-flex align-items-center gap-2">
+        <!-- Filtro ciclo escolar -->
+         <label class="fw-bold">Seleccione el ciclo escolar</label>
+        <select class="form-select w-auto"
+                [(ngModel)]="cicloActivo"
+                (ngModelChange)="cambiarCiclo($event)">
+            <option *ngFor="let ciclo of ciclos" [value]="ciclo">
+                {{ ciclo }}
+            </option>
+        </select>
+
+        <!-- Botón nuevo -->
+        <button class="btn btn-primary"
+                (click)="abrirModalNuevo()">
+            <i class="bi bi-plus"></i> Nuevo Grupo
+        </button>
+    </div>
 </div>
+
 
 <div class="table-responsible custom-scroll">
     <table class="table table-striped table-hover custom-table">
@@ -44,7 +61,7 @@
             </tr>
         </ng-template>
     </table>
-</div>  
+</div>
 
 
 <!-- Backdrop-->
@@ -136,6 +153,21 @@
                                     {{ dia }}
                                 </label>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Ciclo escolar</label>
+
+                        <div class="d-flex gap-2">
+                            <select class="form-select" [(ngModel)]="grupoSeleccionado.cicloEscolar" name="cicloEscolar"
+                                required [disabled]="!modoEdicion">
+
+                                <option value="" disabled>Ciclo</option>
+                                <option *ngFor="let ciclo of ciclos" [value]="ciclo">
+                                    {{ ciclo }}
+                                </option>
+                            </select>
                         </div>
                     </div>
 
