--- a/Frontend/app/src/app/business/pagos/pagos.component.html
+++ b/Frontend/app/src/app/business/pagos/pagos.component.html
@@ -1,1 +1,87 @@
-<p>pagos works!</p>
+<div class="row align-items-center mb-4">
+
+    <!-- Título -->
+    <div class="col-md-3">
+        <h1 class="display-4 m-0">Pagos</h1>
+    </div>
+
+    <div class="col-md-3 d-flex justify-content-end">
+        <label class="fw-bold">Filtros</label>
+    </div>
+
+    <!-- Filtros -->
+    <div class="col-md-6">
+        <div class="row g-3 align-items-center">
+
+            <!-- Ciclo escolar -->
+            <div class="col-md-4 d-flex align-items-center gap-2">
+
+
+                <select class="form-select" [(ngModel)]="cicloActivo" (ngModelChange)="cambiarCiclo($event)">
+                    <option value="" disabled selected>Seleccione el ciclo escolar</option>
+                    <option *ngFor="let ciclo of ciclos" [value]="ciclo">
+                        {{ ciclo }}
+                    </option>
+                </select>
+            </div>
+
+            <!-- Grupo -->
+            <div class="col-md-8">
+
+                <select class="form-select" [(ngModel)]="grupoSeleccionado" (ngModelChange)="cargarAlumnos($event)"
+                    [disabled]="grupos.length === 0">
+                    <option [ngValue]="null" disabled>Seleccione un grupo</option>
+                    <option *ngFor="let grupo of grupos" [value]="grupo.id">
+                        {{ grupo.codigo }} - {{ grupo.curso }}
+                    </option>
+                </select>
+
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<!-- Tabla principal-->
+<div class="table-responsible custom-scroll">
+    <table class="table table-striped table-hover custom-table">
+        <thead class="table-danger sticky-header">
+            <tr>
+                <th>#</th>
+                <th>Codigo Personal</th>
+                <th>Nombre completo</th>
+                
+                <th>Ultimo colegiatura</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody *ngIf="alumnos.length > 0; else sinAlumnos">
+            <tr *ngFor="let registro of alumnos; let i = index">
+                <td>{{ i + 1 }}</td>
+
+                <td>{{ registro.alumno.codigoPersonal }}</td>
+                <td>
+                    {{ registro.alumno.primerNombre }}
+                    {{ registro.alumno.segundoNombre ?? '' }}
+                    {{ registro.alumno.primerApellido }}
+                    {{ registro.alumno.segundoApellido ?? '' }}
+                </td>
+
+                
+
+                <td> </td>
+                <td>
+                    <button class="btn btn-sm btn-outline-primary">Ver Pagos</button>
+                </td>
+            </tr>
+        </tbody>
+        <ng-template #sinAlumnos>
+            <tr>
+                <td colspan="9" class="text-center text-muted py-3">
+                    No hay alumnos en este grupo
+                </td>
+            </tr>
+        </ng-template>
+    </table>
+</div>
