Arreglo de historial de pagos

--- a/Frontend/app/src/app/business/info-grupo/info-grupo.component.html
+++ b/Frontend/app/src/app/business/info-grupo/info-grupo.component.html
@@ -79,7 +79,10 @@
                                     <td class="text-center">{{ asignacion.alumno.codigoPersonal }}</td>
                                     <td>
                                         {{ asignacion.alumno.primerNombre }}
+                                        {{ asignacion.alumno.segundoNombre}}
+                                        {{ asignacion.alumno.tercerNombre}}
                                         {{ asignacion.alumno.primerApellido }}
+                                        {{ asignacion.alumno.segundoApellido}}
                                     </td>
 
                                     <td class="text-center">—</td>
