--- a/Frontend/app/src/app/business/pagos/pagos.component.html
+++ b/Frontend/app/src/app/business/pagos/pagos.component.html
@@ -72,7 +72,7 @@
 
                 <td> </td>
                 <td>
-                    <button class="btn btn-sm btn-outline-primary">Ver Pagos</button>
+                    <button class="btn btn-sm btn-outline-primary" [routerLink]="['/pagos/historial', registro.id]">Ver Pagos</button>
                 </td>
             </tr>
         </tbody>
